# zkWasm-host-circuits

./: .gitignore  Cargo.toml  README.md  bls.json  jubtest.sh  keccak256_test.json  keccak256_test_multi.json  package-lock.json  package.json  run.sh  runserver.sh  test.sh  test2.sh  test_bls381.sh  test_bn254.sh  test_jubjub.sh  test_keccak.sh  test_keccak_external.sh  test_merkle.sh  test_poseidon.sh
src/: common.rs  controller.rs  hash_helper_keccak.rs  keccak.rs  keccak_reference.rs  lib.rs  main.rs  map2curve_helper.rs  proof.rs  zkWasm-rust-lib.rs
src/adaptor/: bls381adaptor  bls381adaptor.rs  bn256adaptor.rs  hash2G2adaptor.rs  hashadaptor.rs  keccakadaptor.rs  map2curveadaptor.rs  merkleadaptor.rs  mod.rs  msmadaptor.rs
src/circuits/: anemoi.rs  babyjub.rs  bits_arith.rs  bls  bls.rs  bn256.rs  bubblesort.txt  host.rs  keccak256.rs  keccak_arith_table.rs  map_to_curve.rs  merkle.rs  mod.rs  modexp.rs  poseidon.rs  range.rs  rmd160.rs  rtable.rs  sgn0.rs  test.rs
src/host/: bls.rs  bn256.rs  cache.rs  datahash.rs  db.rs  jubjub.rs  keccak.rs  keccak256.rs  keccak_reference.rs  kvpair.rs  merkle.rs  mod.rs  mongomerkle.rs  poseidon.rs  rmd160.rs
src/host/kvpair_db_upgrade/: README  upgrade.js
src/migrate/: migrate_from_mongo_to_rocksdb.rs
src/scripts/kvpair_db_upgrade/: README  db_upgrade.ts  package-lock.json  package.json  tsconfig.json  upgrade.js  upgrade.sh
src/tests/createproofTest/: blspairtest.json  createproofTest.js
src/utils/: macros.rs  mod.rs  params.rs  test.rs
