[package]
name = "zkwasm-host-circuits"
authors = ["DelphinusLab <xgao@zoyoe.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }
halo2ecc-s = { git = "https://github.com/lanbones/halo2ecc-s.git", branch = "main" }
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.93"
clap = { version = "3.2.22", features = ["derive", "cargo"] }
subtle = "2.4"
lazy_static = "1.4.0"
ripemd = "0.1.3"
