[package]
name = "zkwasm-host-circuits"
authors = ["DelphinusLab <xgao@zoyoe.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_host_circuits"
path = "src/lib.rs"

[[bin]]
name = "zkwasm-host-circuits-prover"
path = "src/main.rs"

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
ff = "0.12"
halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }
halo2aggregator-s = { git = "https://github.com/DelphinusLab/halo2aggregator-s.git", tag = "bisect-lookup-0.2.1" }
halo2ecc-s = { git = "https://github.com/lanbones/halo2ecc-s.git", branch = "bisect-lookup" }
num-bigint = { version = "0.4", features = ["rand"] }
poseidon = { git = "https://github.com/lanbones/poseidon" }
rand = "0.8"
ark-std = { version = "0.3.0", features = ["print-trace"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
clap = { version = "3.2.22", features = ["derive", "cargo"] }
subtle = "2.4"
lazy_static = "1.4.0"
hex = "0.4"
mongodb = { version = "2.5.0", default-features = false}
ripemd = "0.1.3"

[features]
default = ["mongo-tokio-sync"]
mongo-std-sync = ["mongodb/sync"]
mongo-tokio-sync = ["mongodb/tokio-sync"]