[package]
name = "zkwasm-host-circuits"
authors = ["DelphinusLab <xgao@zoyoe.com>"]
version = "0.1.0"
edition = "2021"
default-run = "zkwasm-host-circuits-prover"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zkwasm_host_circuits"
path = "src/lib.rs"

[[bin]]
name = "zkwasm-host-circuits-prover"
path = "src/main.rs"

[[bin]]
name = "migrate_from_mongo_to_rocksdb"
path = "src/migrate/migrate_from_mongo_to_rocksdb.rs"

[dependencies]
strum = "0.24.1"
strum_macros = "0.24.1"
ff = "0.12"
cfg-if = "1.0.0"
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", tag="stable-logup-shuffle-v1.0.0",default-features = true }
halo2ecc-o = { git = "https://github.com/ooglayout/halo2ecc-o.git"}
itertools = "0.10.0"
num-bigint = { version = "0.4", features = ["rand"] }
poseidon = { git = "https://github.com/DelphinusLab/poseidon" }
circuits-batcher = { git = "https://github.com/DelphinusLab/continuation-batcher.git", tag="stable-logup-shuffle-1.0" }
rand = "0.8"
rand_core = "0.6"
ark-std = { version = "0.4.0" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
clap = { version = "3.2.22", features = ["derive", "cargo"] }
subtle = "2.4"
lazy_static = "1.4.0"
hex = "0.4"
mongodb = { version = "2.5.0", default-features = false}
ripemd = "0.1.3"
lru = "0.11.0"
anyhow = "1.0.86"
num-traits = "0.2.15"
num-derive = "0.3"
rocksdb = "0.21.0"
tempfile = "3.4.0"

[features]
default = ["mongo-tokio-sync"]
perf = ["circuits-batcher/perf"]
mongo-std-sync = ["mongodb/sync"]
mongo-tokio-sync = ["mongodb/tokio-sync"]
cuda = ["halo2_proofs/cuda"]
complex-leaf = []
profile = ["ark-std/print-trace", "halo2_proofs/profile", "circuits-batcher/profile"]
